# food-me

./: .dockerignore  .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  go.mod  go.sum
.github/workflows/: bump.yaml  go.yml  release.yaml
api/: routes.go  routes_test.go  routest_test.go  schemas.go  server.go
cmd/: main.go
data/: cert.pem  key.pem  test_sql.sql
e2e/: run_e2e_tests.sh
examples/: README.md
examples/postgres-keycloak/: Dockerfile  docker-compose.yml  example.py  pyproject.toml
examples/postgres-keycloak-assume-role/: docker-compose.yml  example.py  pyproject.toml
examples/postgres-keycloak-double-tls/: Dockerfile  docker-compose.yml  example.py  foodme.crt  foodme.key  server.crt
examples/postgres-keycloak-multiclients/: Dockerfile  docker-compose.yml  example.py  pyproject.toml
examples/postgres-keycloak-opa/: docker-compose.yml  example.py  pets.rego  pyproject.toml
examples/postgres-keycloak-postauth/: Dockerfile  auth.sql  docker-compose.yml  example.py  pyproject.toml
examples/postgres-keycloak-tls/: docker-compose.yml  example.py  privkey.pem  server.req
internal/: config.go  config_test.go  handler.go  http.go  interfaces.go  oidc.go  oidc_test.go  opa.go  opa_test.go  permission_agent.go  permission_agent_http.go  permission_agent_http_test.go  permission_agent_test.go  postgres.go  postgres_sql_handler.go  postgres_sql_handler_test.go  postgres_test.go  postgres_utils.go  postgres_utils_test.go  server.go  server_test.go  sqlhandler.go  sqlhandler_test.go  state.go  state_test.go  utils.go  utils_test.go
(+11 files in other folders)
